--- a/index.html
+++ b/index.html
@@ -1,38 +1,170 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Spec proposal</title>
-    <script src="https://www.w3.org/Tools/respec/respec-w3c" class="remove"></script>
-    <script class='remove'>
-      // See https://github.com/w3c/respec/wiki/ for how to configure ReSpec
-      var respecConfig = {
-        specStatus: "CG-DRAFT",
-        shortName: "timing-entry-names-registry",
-        editors: [{
-          name: "Philippe Le Hegaret"
-        }]
-      };
-    </script>
-  </head>
-  <body>
-    <section id="abstract">
-      <p>
-        This specification does neat stuff.
-      </p>
-    </section>
-    <section id="sotd">
-      <p>
-        This is an unofficial proposal.
-      </p>
-    </section>
-
-    <section id="introduction">
-      <h2>Introduction</h2>
-      <p>
-        See <a href="https://github.com/w3c/respec/wiki/User's-Guide">ReSpec's user guide</a>
-        for how toget started!
-      </p>
-    </section>
-  </body>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta content="text/html; charset=utf-8" http-equiv="content-type">
+	<title>Timing Entry Names Registry</title>
+	<script async class="remove" src=
+	"https://www.w3.org/Tools/respec/respec-w3c-common">
+	</script>
+	<script class="remove">
+	 var respecConfig = {
+	     shortName:            "timing-entrytypes-registry",
+	   specStatus:           "ED",
+	     // specStatus:           "WG-NOTE",
+	     noRecTrack: true,
+	     edDraftURI:  "https://w3c.github.io/timing-entrytypes-registry/",
+	     editors:  [
+	       {
+	         name:    "Philippe Le Hegaret"
+	       ,  company: "W3C"
+	       ,  w3cid:   "6457"
+	     }
+	     ],
+	     wg: "Web Performance Working Group",
+	     wgURI: "https://www.w3.org/webperf/",
+	     wgPatentURI:  "https://www.w3.org/2004/01/pp-impl/45211/status",
+	     github: {
+	       repoURL: "https://github.com/w3c/timing-entrytypes-registry/",
+	       branch: "master",
+	     }
+	   };
+	</script>
+</head>
+<body>
+	<section id="abstract">
+		<p>This document provides a registry of <a data-cite=
+		'PERFORMANCE-TIMELINE#dom-performanceentry-entrytype'>PerformanceEntry.entryType</a>
+		used in Performance Timeline [[PERFORMANCE-TIMELINE]].</p>
+	</section>
+	<section id="sotd">
+		<p>For updates, see <a href='#registration'>Registration Entry Requirements
+		and Update Process</a>.</p>
+	</section>
+	<section class='informative' id='purpose'>
+		<h2>Purpose</h2>
+		<p>Performance Timeline [[PERFORMANCE-TIMELINE]] defines primitives that
+		enable web developers to access, instrument, and retrieve various performance
+		metrics from the full lifecycle of a web application. The performance data of
+		various metrics is hosted in <a data-cite=
+		'PERFORMANCE-TIMELINE#dom-performanceentry'>PerformanceEntry</a> objects. The
+		type of interface for a <a data-cite=
+		'PERFORMANCE-TIMELINE#dom-performanceentry'>PerformanceEntry</a> object is
+		identified with <a data-cite=
+		'PERFORMANCE-TIMELINE#dom-performanceentry-entrytype'>entryType</a></p>
+		<p>This registry is intended to provide a central location for enumerating
+		identified interface types of <a data-cite=
+		'PERFORMANCE-TIMELINE#dom-performanceentry'>PerformanceEntry</a> object.</p>
+	</section>
+	<section class='normative' id='registration'>
+		<h2>Registration Entry Requirements and Update Process</h2>
+		<ul>
+			<li>Each entry must include a unique identifier used by <a data-cite=
+			'PERFORMANCE-TIMELINE#dom-performanceentry-entrytype'>PerformanceEntry.entryType</a>,
+			where the scope of uniqueness is the <a data-cite=
+			'PERFORMANCE-TIMELINE#dom-performanceentry-entrytype'>entryType</a> itself.
+			</li>
+			<li>Each entry should include a link that references a public available
+			specification (PAS) that defines the associated interface type.</li>
+			<li>Each entry must include contact information of the requestor.</li>
+		</ul>
+		<p>An update to this registry is an addition, change or deletion of an
+		identifier. Any person can request an update to this registry by pull
+		requests to the <a href=
+		"https://github.com/w3c/timing-entrytypes-registry/">timing-entrytypes-registry</a>
+		repository. The Web Performance Working Group will place it on an upcoming
+		meeting agenda and notify the requestor. Consideration and disposition of the
+		request is by consensus of the W3C Web Performance Working Group. The Chair
+		will then notify the requestor of the outcome and update the registry
+		accordingly.</p>
+	</section>
+	<section class='normative' id='registry'>
+		<h2>Registry</h2>
+		<p>This section is the registry of identified <a data-cite=
+		'PERFORMANCE-TIMELINE#dom-performanceentry-entrytype'>PerformanceEntry.entryType</a>
+		values for performance timeline interfaces [[PERFORMANCE-TIMELINE]].</p>
+		<table class="simple" style="width:100%;">
+			<thead>
+				<tr>
+					<th><code>entryType</code>&gt; Identifier</th>
+					<th>Interface Type(s)</th>
+					<th>Public Specification(s)</th>
+					<th>Requestor Contact</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><code>"mark"</code></td>
+					<td>
+						<a data-cite="USER-TIMING-2#dom-performancemark">PerformanceMark</a>
+					</td>
+					<td>[[!USER-TIMING-2]]</td>
+					<td>
+						<a class="external text" href="https://www.w3.org/webperf/" rel=
+						"nofollow">W3C</a>
+					</td>
+				</tr>
+				<tr>
+					<td><code>"measure"</code></td>
+					<td>
+						<a data-cite=
+						"USER-TIMING-2#dom-performancemeasure">PerformanceMeasure</a>
+					</td>
+					<td>[[!USER-TIMING-2]]</td>
+					<td>
+						<a class="external text" href="https://www.w3.org/webperf/" rel=
+						"nofollow">W3C</a>
+					</td>
+				</tr>
+				<tr>
+					<td><code>"navigation"</code></td>
+					<td>
+						<a data-cite=
+						"NAVIGATION-TIMING-2#dom-performancenavigationtiming">PerformanceNavigationTiming</a>
+					</td>
+					<td>[[!NAVIGATION-TIMING-2]]</td>
+					<td>
+						<a class="external text" href="https://www.w3.org/webperf/" rel=
+						"nofollow">W3C</a>
+					</td>
+				</tr>
+				<tr>
+					<td><code>"resource"</code></td>
+					<td>
+						<a data-cite=
+						"RESOURCE-TIMING-2#dom-performanceresourcetiming">PerformanceResourceTiming</a>
+					</td>
+					<td>[[!RESOURCE-TIMING-2]]</td>
+					<td>
+						<a class="external text" href="https://www.w3.org/webperf/" rel=
+						"nofollow">W3C</a>
+					</td>
+				</tr>
+				<tr>
+					<td><code>"longtask"</code></td>
+					<td>
+						<a data-cite=
+						"LONGTASKS-1#performancelongtasktiming">PerformanceLongTaskTiming</a>
+					</td>
+					<td>[[!LONGTASKS-1]]</td>
+					<td>
+						<a class="external text" href="https://www.w3.org/webperf/" rel=
+						"nofollow">W3C</a>
+					</td>
+				</tr>
+				<tr>
+					<td><code>"paint"</code></td>
+					<td>
+						<a data-cite=
+						"PAINT-TIMING#performancepainttiming">PerformancePaintTiming</a>
+					</td>
+					<td>[[!PAINT-TIMING]]</td>
+					<td>
+						<a class="external text" href="https://www.w3.org/webperf/" rel=
+						"nofollow">W3C</a>
+					</td>
+        </tr>
+			</tbody>
+		</table>
+	</section>
+</body>
 </html>
