--- a/index.html
+++ b/index.html
@@ -24,17 +24,22 @@
 	     wgURI: "https://www.w3.org/webperf/",
 	     wgPatentURI:  "https://www.w3.org/2004/01/pp-impl/45211/status",
 	     github: {
-	       repoURL: "https://github.com/w3c/timing-entrytypes-registry/",
-	       branch: "master",
-	     }
+				 repoURL: "https://github.com/w3c/timing-entrytypes-registry/",
+				 branch: "master"
+			 },
+			 lint: {
+        "check-punctuation": true,
+       },
+       doJsonLd: true,
+       xref: [ "performance-timeline-2" ],
+       mdn: true,
 	   };
 	</script>
 </head>
 <body>
 	<section id="abstract">
-		<p>This document provides a registry of <a data-cite=
-		'PERFORMANCE-TIMELINE#dom-performanceentry-entrytype'>PerformanceEntry.entryType</a>
-		used in Performance Timeline [[PERFORMANCE-TIMELINE]].</p>
+		<p>This document provides a registry of <a>PerformanceEntry.entryType</a>
+		used in Performance Timeline [[PERFORMANCE-TIMELINE-2]].</p>
 	</section>
 	<section id="sotd">
 		<p>For updates, see <a href='#registration'>Registration Entry Requirements
@@ -42,26 +47,22 @@
 	</section>
 	<section class='informative' id='purpose'>
 		<h2>Purpose</h2>
-		<p>Performance Timeline [[PERFORMANCE-TIMELINE]] defines primitives that
+		<p>Performance Timeline [[PERFORMANCE-TIMELINE-2]] defines primitives that
 		enable web developers to access, instrument, and retrieve various performance
 		metrics from the full lifecycle of a web application. The performance data of
-		various metrics is hosted in <a data-cite=
-		'PERFORMANCE-TIMELINE#dom-performanceentry'>PerformanceEntry</a> objects. The
-		type of interface for a <a data-cite=
-		'PERFORMANCE-TIMELINE#dom-performanceentry'>PerformanceEntry</a> object is
-		identified with <a data-cite=
-		'PERFORMANCE-TIMELINE#dom-performanceentry-entrytype'>entryType</a></p>
+		various metrics is hosted in <dfn data-cite=
+		'PERFORMANCE-TIMELINE-2#dom-performanceentry'><code>PerformanceEntry</code></dfn> objects. The
+		type of interface for a <a>PerformanceEntry</a> object is
+		identified with <dfn data-lt="PerformanceEntry.entryType" data-cite=
+		'PERFORMANCE-TIMELINE-2#dom-performanceentry-entrytype'><code>entryType</code></dfn>.</p>
 		<p>This registry is intended to provide a central location for enumerating
-		identified interface types of <a data-cite=
-		'PERFORMANCE-TIMELINE#dom-performanceentry'>PerformanceEntry</a> object.</p>
+		identified interface types of <a>PerformanceEntry</a> object.</p>
 	</section>
 	<section class='normative' id='registration'>
 		<h2>Registration Entry Requirements and Update Process</h2>
 		<ul>
-			<li>Each entry must include a unique identifier used by <a data-cite=
-			'PERFORMANCE-TIMELINE#dom-performanceentry-entrytype'>PerformanceEntry.entryType</a>,
-			where the scope of uniqueness is the <a data-cite=
-			'PERFORMANCE-TIMELINE#dom-performanceentry-entrytype'>entryType</a> itself.
+			<li>Each entry must include a unique identifier used by <a>PerformanceEntry.entryType</a>,
+			where the scope of uniqueness is the <a>entryType</a> itself.
 			</li>
 			<li>Each entry should include a link that references a public available
 			specification (PAS) that defines the associated interface type.</li>
@@ -79,13 +80,12 @@
 	</section>
 	<section class='normative' id='registry'>
 		<h2>Registry</h2>
-		<p>This section is the registry of identified <a data-cite=
-		'PERFORMANCE-TIMELINE#dom-performanceentry-entrytype'>PerformanceEntry.entryType</a>
-		values for performance timeline interfaces [[PERFORMANCE-TIMELINE]].</p>
+		<p>This section is the registry of identified <a>PerformanceEntry.entryType</a>
+		values for performance timeline interfaces [[PERFORMANCE-TIMELINE-2]].</p>
 		<table class="simple" style="width:100%;">
 			<thead>
 				<tr>
-					<th><code>entryType</code>&gt; Identifier</th>
+					<th><code>entryType</code> Identifier</th>
 					<th>Interface Type(s)</th>
 					<th>Public Specification(s)</th>
 					<th>Requestor Contact</th>
@@ -95,72 +95,66 @@
 				<tr>
 					<td><code>"mark"</code></td>
 					<td>
-						<a data-cite="USER-TIMING-2#dom-performancemark">PerformanceMark</a>
+						<a data-cite="USER-TIMING-2#dom-performancemark"><code>PerformanceMark</code></a>
 					</td>
 					<td>[[!USER-TIMING-2]]</td>
 					<td>
-						<a class="external text" href="https://www.w3.org/webperf/" rel=
-						"nofollow">W3C</a>
+						<a href="https://www.w3.org/webperf/">W3C</a>
 					</td>
 				</tr>
 				<tr>
 					<td><code>"measure"</code></td>
 					<td>
 						<a data-cite=
-						"USER-TIMING-2#dom-performancemeasure">PerformanceMeasure</a>
+						"USER-TIMING-2#dom-performancemeasure"><code>PerformanceMeasure</code></a>
 					</td>
 					<td>[[!USER-TIMING-2]]</td>
 					<td>
-						<a class="external text" href="https://www.w3.org/webperf/" rel=
-						"nofollow">W3C</a>
+						<a href="https://www.w3.org/webperf/">W3C</a>
 					</td>
 				</tr>
 				<tr>
 					<td><code>"navigation"</code></td>
 					<td>
 						<a data-cite=
-						"NAVIGATION-TIMING-2#dom-performancenavigationtiming">PerformanceNavigationTiming</a>
+						"NAVIGATION-TIMING-2#dom-performancenavigationtiming"><code>PerformanceNavigationTiming</code></a>
 					</td>
 					<td>[[!NAVIGATION-TIMING-2]]</td>
 					<td>
-						<a class="external text" href="https://www.w3.org/webperf/" rel=
-						"nofollow">W3C</a>
+						<a href="https://www.w3.org/webperf/">W3C</a>
 					</td>
 				</tr>
 				<tr>
 					<td><code>"resource"</code></td>
 					<td>
 						<a data-cite=
-						"RESOURCE-TIMING-2#dom-performanceresourcetiming">PerformanceResourceTiming</a>
+						"RESOURCE-TIMING-2#dom-performanceresourcetiming"><code>PerformanceResourceTiming</code></a>
 					</td>
 					<td>[[!RESOURCE-TIMING-2]]</td>
 					<td>
-						<a class="external text" href="https://www.w3.org/webperf/" rel=
-						"nofollow">W3C</a>
+						<a href="https://www.w3.org/webperf/">W3C</a>
 					</td>
 				</tr>
 				<tr>
 					<td><code>"longtask"</code></td>
 					<td>
 						<a data-cite=
-						"LONGTASKS-1#performancelongtasktiming">PerformanceLongTaskTiming</a>
+						"LONGTASKS-1#performancelongtasktiming"><code>PerformanceLongTaskTiming</code></a>
 					</td>
 					<td>[[!LONGTASKS-1]]</td>
 					<td>
-						<a class="external text" href="https://www.w3.org/webperf/" rel=
-						"nofollow">W3C</a>
+						<a href="https://www.w3.org/webperf/">W3C</a>
 					</td>
 				</tr>
 				<tr>
 					<td><code>"paint"</code></td>
 					<td>
 						<a data-cite=
-						"PAINT-TIMING#performancepainttiming">PerformancePaintTiming</a>
+						"PAINT-TIMING#performancepainttiming"><code>PerformancePaintTiming</code></a>
 					</td>
 					<td>[[!PAINT-TIMING]]</td>
 					<td>
-						<a class="external text" href="https://www.w3.org/webperf/" rel=
-						"nofollow">W3C</a>
+						<a href="https://www.w3.org/webperf/">W3C</a>
 					</td>
         </tr>
 			</tbody>
