--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
 			<li>Each entry should include a link that references a public available
 			specification (PAS) that defines the associated interface type.</li>
 			<li>Each entry must include contact information of the requestor.</li>
-                        <li>Each entry must include an <dfn data-cite=
-		'PERFORMANCE-TIMELINE-2#dom-performancetimeline-availableFromTimeline'><code>availableFromTimeline</code></dfn> boolean.
-                        <li>Each entry must include a <dfn data-cite=
-		'PERFORMANCE-TIMELINE-2#dom-performancetimeline-maxBufferSize'><code>maxBufferSize</code></dfn> indication.
+                        <li>Each entry must include an <dfn><code>availableFromTimeline</code></dfn> boolean
+                            indicating whether this entry type is available from the
+                            <a data-cite="hr-time-2#sec-performance">Performance</a> interface. </li>
+                        <li>Each entry must include a <dfn><code>maxBufferSize</code></dfn> indicating the max
+                            buffer size for this entry type.</li>
 		</ul>
 		<p>An update to this registry is an addition, change or deletion of an
 		identifier. Any person can request an update to this registry by pull
