--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <li>Each entry must include an <dfn><code>availableFromTimeline</code></dfn> boolean
                             indicating whether this entry type is available from the
                             <a data-cite="hr-time-2#sec-performance">Performance</a> interface. </li>
-                        <li>Each entry must include a <dfn><code>maxBufferSize</code></dfn> indicating the max
+                        <li>Each entry must include a <dfn><code>maxBufferSize</code></dfn> indicating the maximum
                             buffer size for this entry type.</li>
 		</ul>
 		<p>An update to this registry is an addition, change or deletion of an
