--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 				<tr>
 					<th><code>entryType</code> Identifier</th>
 					<th>Interface Type(s)</th>
-                                        <th>Available From Timeline</th>
-                                        <th>Max Buffer Size</th>
+                                        <th><a>availableFromTimeline</a></th>
+                                        <th><a>maxBufferSize</a></th>
 					<th>Public Specification(s)</th>
 					<th>Requestor Contact</th>
 				</tr>
