Add more entryTypes to the registry

--- a/index.html
+++ b/index.html
@@ -176,6 +176,71 @@
 						<a href="https://www.w3.org/webperf/">W3C</a>
 					</td>
         </tr>
+        <tr>
+          <td><code>"element"</code></td>
+          <td>
+            <a data-cite=
+            "ELEMENT-TIMING#performanceelementtiming"><code>PerformanceElementTiming</code></a>
+          </td>
+                                        <td><code>False</code></td>
+                                        <td><code>150</code></td>
+          <td>[[!ELEMENT-TIMING]]</td>
+          <td>
+            <a href="https://wicg.io">WICG</a>
+          </td>
+        </tr>
+        <tr>
+          <td><code>"event"</code></td>
+          <td>
+            <a data-cite=
+            "EVENT-TIMING#performanceeventtiming"><code>PerformanceEventTiming</code></a>
+          </td>
+                                        <td><code>False</code></td>
+                                        <td><code>150</code></td>
+          <td>[[!EVENT-TIMING]]</td>
+          <td>
+            <a href="https://wicg.io">WICG</a>
+          </td>
+        </tr>
+        <tr>
+          <td><code>"first-input"</code></td>
+          <td>
+            <a data-cite=
+            "EVENT-TIMING#performanceeventtiming"><code>PerformanceEventTiming</code></a>
+          </td>
+                                        <td><code>True</code></td>
+                                        <td><code>1</code></td>
+          <td>[[!EVENT-TIMING]]</td>
+          <td>
+            <a href="https://wicg.io">WICG</a>
+          </td>
+        </tr>
+        <tr>
+          <td><code>"layout-shift"</code></td>
+          <td>
+            <a data-cite=
+            "LAYOUT-INSTABILITY#layoutshift"><code>Layoutshift</code></a>
+          </td>
+                                        <td><code>False</code></td>
+                                        <td><code>150</code></td>
+          <td>[[!LAYOUT-INSTABILITY]]</td>
+          <td>
+            <a href="https://wicg.io">WICG</a>
+          </td>
+        </tr>
+        <tr>
+          <td><code>"largest-contentful-paint"</code></td>
+          <td>
+            <a data-cite=
+            "LARGEST-CONTENTFUL-PAINT#largestcontentfulpaint"><code>LargestContentfulPaint</code></a>
+          </td>
+                                        <td><code>False</code></td>
+                                        <td><code>150</code></td>
+          <td>[[!LARGEST-CONTENTFUL-PAINT]]</td>
+          <td>
+            <a href="https://wicg.io">WICG</a>
+          </td>
+        </tr>
 			</tbody>
 		</table>
 	</section>
