--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <td><code>"layout-shift"</code></td>
           <td>
             <a data-cite=
-            "LAYOUT-INSTABILITY#layoutshift"><code>Layoutshift</code></a>
+            "LAYOUT-INSTABILITY#layoutshift"><code>LayoutShift</code></a>
           </td>
                                         <td><code>False</code></td>
                                         <td><code>150</code></td>
