--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 						"LONGTASKS-1#performancelongtasktiming"><code>PerformanceLongTaskTiming</code></a>
 					</td>
                                         <td><code>False</code></td>
-                                        <td>200</td>
+					<td><code>200</code></td>
 					<td>[[!LONGTASKS-1]]</td>
 					<td>
 						<a href="https://www.w3.org/webperf/">W3C</a>
