Add column for algorithm of observer vs entry
Fixes https://github.com/w3c/timing-entrytypes-registry/issues/12

--- a/index.html
+++ b/index.html
@@ -61,17 +61,21 @@
 	<section class='normative' id='registration'>
 		<h2>Registration Entry Requirements and Update Process</h2>
 		<ul>
-			<li>Each entry must include a unique identifier used by <a>PerformanceEntry.entryType</a>,
+			<li>Each entry type must include a unique identifier used by <a>PerformanceEntry.entryType</a>,
 			where the scope of uniqueness is the <a>entryType</a> itself.
 			</li>
-			<li>Each entry should include a link that references a public available
-			specification (PAS) that defines the associated interface type.</li>
-			<li>Each entry must include contact information of the requestor.</li>
-                        <li>Each entry must include an <dfn><code>availableFromTimeline</code></dfn> boolean
-                            indicating whether this entry type is available from the
-                            <a data-cite="hr-time-2#sec-performance">Performance</a> interface. </li>
-                        <li>Each entry must include a <dfn><code>maxBufferSize</code></dfn> indicating the maximum
-                            buffer size for this entry type.</li>
+			<li>Each entry type should include a link that references a public available
+        specification (PAS) that defines the associated interface type.</li>
+			<li>Each entry type must include contact information of the requestor.</li>
+      <li>Each entry type must include an <dfn><code>availableFromTimeline</code></dfn> boolean
+        indicating whether this entry type is available from the
+      <a data-cite="hr-time-2#sec-performance">Performance</a> interface. </li>
+      <li>Each entry type must include a <dfn><code>maxBufferSize</code></dfn> indicating the maximum
+        buffer size for this entry type.</li>
+      <li>Each entry type must specify an algorithm <dfn>Should add entry to observer</dfn> which,
+        given an |entry| of the entry type and an |observer| which observes entries of that type,
+        determines whether |entry| must be appended to the |observer|'s <a data-cite=
+        'PERFORMANCE-TIMELINE-2#dfn-observer-buffer'>observer buffer</a> or not.</li>
 		</ul>
 		<p>An update to this registry is one of the following:
       <ul>
@@ -100,10 +104,11 @@
 				<tr>
 					<th><code>entryType</code> Identifier</th>
 					<th>Interface Type(s)</th>
-                                        <th><a>availableFromTimeline</a></th>
-                                        <th><a>maxBufferSize</a></th>
+          <th><a>availableFromTimeline</a></th>
+          <th><a>maxBufferSize</a></th>
+          <th><a>Should add entry to observer</a></th>
 					<th>Public Specification(s)</th>
-					<th>Requestor Contact</th>
+          <th>Requestor Contact</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -112,8 +117,9 @@
 					<td>
 						<a data-cite="USER-TIMING-2#dom-performancemark"><code>PerformanceMark</code></a>
 					</td>
-                                        <td><code>True</code></td>
-                                        <td><code>Infinite</code></td>
+          <td><code>True</code></td>
+          <td><code>Infinite</code></td>
+          <td>Return true</td>
 					<td>[[!USER-TIMING-2]]</td>
 					<td>
 						<a href="https://www.w3.org/webperf/">W3C</a>
@@ -125,8 +131,9 @@
 						<a data-cite=
 						"USER-TIMING-2#dom-performancemeasure"><code>PerformanceMeasure</code></a>
 					</td>
-                                        <td><code>True</code></td>
-                                        <td><code>Infinite</code></td>
+          <td><code>True</code></td>
+          <td><code>Infinite</code></td>
+          <td>Return true</td>
 					<td>[[!USER-TIMING-2]]</td>
 					<td>
 						<a href="https://www.w3.org/webperf/">W3C</a>
@@ -138,8 +145,9 @@
 						<a data-cite=
 						"NAVIGATION-TIMING-2#dom-performancenavigationtiming"><code>PerformanceNavigationTiming</code></a>
 					</td>
-                                        <td><code>True</code></td>
-                                        <td><code>Infinite</code></td>
+          <td><code>True</code></td>
+          <td><code>Infinite</code></td>
+          <td>Return true</td>
 					<td>[[!NAVIGATION-TIMING-2]]</td>
 					<td>
 						<a href="https://www.w3.org/webperf/">W3C</a>
@@ -151,8 +159,9 @@
 						<a data-cite=
 						"RESOURCE-TIMING-2#dom-performanceresourcetiming"><code>PerformanceResourceTiming</code></a>
 					</td>
-                                        <td><code>True</code></td>
-                                        <td><code>250</code></td>
+          <td><code>True</code></td>
+          <td><code>250</code></td>
+          <td>Return true</td>
 					<td>[[!RESOURCE-TIMING-2]]</td>
 					<td>
 						<a href="https://www.w3.org/webperf/">W3C</a>
@@ -164,8 +173,9 @@
 						<a data-cite=
 						"LONGTASKS-1#performancelongtasktiming"><code>PerformanceLongTaskTiming</code></a>
 					</td>
-                                        <td><code>False</code></td>
-                                        <td><code>200</code></td>
+          <td><code>False</code></td>
+          <td><code>200</code></td>
+          <td>Return true</td>
 					<td>[[!LONGTASKS-1]]</td>
 					<td>
 						<a href="https://www.w3.org/webperf/">W3C</a>
@@ -177,8 +187,9 @@
 						<a data-cite=
 						"PAINT-TIMING#performancepainttiming"><code>PerformancePaintTiming</code></a>
 					</td>
-                                        <td><code>True</code></td>
-                                        <td><code>2</code></td>
+          <td><code>True</code></td>
+          <td><code>2</code></td>
+          <td>Return true</td>
 					<td>[[!PAINT-TIMING]]</td>
 					<td>
 						<a href="https://www.w3.org/webperf/">W3C</a>
@@ -190,8 +201,9 @@
             <a data-cite=
             "ELEMENT-TIMING#performanceelementtiming"><code>PerformanceElementTiming</code></a>
           </td>
-                                        <td><code>False</code></td>
-                                        <td><code>150</code></td>
+          <td><code>False</code></td>
+          <td><code>150</code></td>
+          <td>Return true</td>
           <td>[[!ELEMENT-TIMING]]</td>
           <td>
             <a href="https://wicg.io">WICG</a>
@@ -203,8 +215,9 @@
             <a data-cite=
             "EVENT-TIMING#performanceeventtiming"><code>PerformanceEventTiming</code></a>
           </td>
-                                        <td><code>False</code></td>
-                                        <td><code>150</code></td>
+          <td><code>False</code></td>
+          <td><code>150</code></td>
+          <td>Return true</td>
           <td>[[!EVENT-TIMING]]</td>
           <td>
             <a href="https://wicg.io">WICG</a>
@@ -216,8 +229,9 @@
             <a data-cite=
             "EVENT-TIMING#performanceeventtiming"><code>PerformanceEventTiming</code></a>
           </td>
-                                        <td><code>True</code></td>
-                                        <td><code>1</code></td>
+          <td><code>True</code></td>
+          <td><code>1</code></td>
+          <td>Return true</td>
           <td>[[!EVENT-TIMING]]</td>
           <td>
             <a href="https://wicg.io">WICG</a>
@@ -229,8 +243,9 @@
             <a data-cite=
             "LAYOUT-INSTABILITY#layoutshift"><code>LayoutShift</code></a>
           </td>
-                                        <td><code>False</code></td>
-                                        <td><code>150</code></td>
+          <td><code>False</code></td>
+          <td><code>150</code></td>
+          <td>Return true</td>
           <td>[[!LAYOUT-INSTABILITY]]</td>
           <td>
             <a href="https://wicg.io">WICG</a>
@@ -242,8 +257,9 @@
             <a data-cite=
             "LARGEST-CONTENTFUL-PAINT#largestcontentfulpaint"><code>LargestContentfulPaint</code></a>
           </td>
-                                        <td><code>False</code></td>
-                                        <td><code>150</code></td>
+          <td><code>False</code></td>
+          <td><code>150</code></td>
+          <td>Return true</td>
           <td>[[!LARGEST-CONTENTFUL-PAINT]]</td>
           <td>
             <a href="https://wicg.io">WICG</a>
