Update should add entry for Event Timing

--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
           </td>
           <td><code>False</code></td>
           <td><code>150</code></td>
-          <td>Return true</td>
+          <td><a data-cite="EVENT-TIMING#should-add-performanceeventtiming">Should add
+            PerformanceEventTiming</a></td>
           <td>[[!EVENT-TIMING]]</td>
           <td>
             <a href="https://wicg.io">WICG</a>
@@ -233,7 +234,8 @@
           </td>
           <td><code>True</code></td>
           <td><code>1</code></td>
-          <td>Return true</td>
+          <td><a data-cite="EVENT-TIMING#should-add-performanceeventtiming">Should add
+            PerformanceEventTiming</a></td>
           <td>[[!EVENT-TIMING]]</td>
           <td>
             <a href="https://wicg.io">WICG</a>
